# Mighty-Eel-OS

./: .dockerignore  .editorconfig  .env.example  .gitignore  .gitleaks.toml  .secrets.baseline  AUDIT_REPORT.md  Cargo.toml  Dockerfile  README.md  conftest.py  deny.toml  pyproject.toml  pytest.ini  requirements-lock.txt  requirements.txt
crates/aog-apiserver/: Cargo.toml
crates/aog-apiserver/src/: admission.rs  auth.rs  backup.rs  codec.rs  convert.rs  error.rs  handlers.rs  lib.rs  policy.rs  reader.rs  seal.rs
crates/aog-apiserver/tests/: admission_bypass.rs  auth.rs  convert.rs  crud.rs  dr_drill.rs  finalizers.rs  policy.rs  receipt.rs  restore.rs  seal.rs
crates/aog-approvals/: Cargo.toml
crates/aog-approvals/src/: lib.rs
crates/aog-conformance/: Cargo.toml
crates/aog-conformance/src/: bars.rs  lib.rs  main.rs
crates/aog-conformance/tests/: robustness_conformance.rs  weave_overhead.rs
crates/aog-controller/: Cargo.toml
crates/aog-controller/src/: autoscale.rs  bundle_store.rs  bundles.rs  capability.rs  deploy.rs  gc.rs  health.rs  intents.rs  lib.rs  maintenance.rs  mission.rs  node.rs  objects.rs  providers.rs  provision.rs  queue.rs  revocation.rs  rings.rs  rollout.rs  runtime.rs  scheduler.rs  teardown.rs  toolgrants.rs  transit.rs  vkeys.rs  workloads.rs
crates/aog-controller/tests/: autoscale.rs  gc.rs  ha.rs  live_bundle.rs  live_deploy.rs  live_maintenance.rs  live_node.rs  live_revocation.rs  live_ring.rs  live_scheduler.rs  live_spend.rs  live_tenant.rs  live_vkey.rs  maintenance.rs  managed_gateway.rs  managed_toolproxy.rs  mission.rs  provider_health.rs  replay.rs  rollout.rs  split_brain.rs  toolgrants.rs
crates/aog-estate/: Cargo.toml
crates/aog-estate/src/: kinds.rs  lib.rs
crates/aog-estate/tests/: roundtrip.rs
crates/aog-federation/: Cargo.toml
crates/aog-federation/src/: lib.rs
crates/aog-gateway/: Cargo.toml
crates/aog-gateway/src/: app.rs  http.rs  lib.rs  main.rs  meter.rs  policy.rs  posture.rs  provider.rs  provider_endpoint.rs  recommend.rs  route.rs  spend.rs  surface_anthropic.rs  surface_openai.rs  tokenize.rs
crates/aog-gateway/tests/: anthropic_surface.rs  completions_legacy.rs  kill_switch.rs  live_gateway.rs  metering.rs  official_client_compat.rs  official_client_probe.py  openai_surface.rs  policy_modes.rs  providers.rs  tenant_isolation.rs  tokenization.rs
crates/aog-node/: Cargo.toml
crates/aog-node/src/: attest.rs  containerd.rs  drain.rs  driver.rs  edge.rs  heartbeat.rs  lib.rs  probes.rs  registration.rs
crates/aog-node/tests/: live_containerd.rs  mode_ladder.rs
crates/aog-noded/: Cargo.toml
crates/aog-noded/src/: lib.rs  main.rs
crates/aog-noded/tests/: edge.rs
crates/aog-scheduler/: Cargo.toml
crates/aog-scheduler/src/: filters.rs  framework.rs  lib.rs  preemption.rs  scorers.rs  types.rs
crates/aog-scheduler/tests/: attested_placement.rs  no_fabricated_metrics.rs  v6_attested_breach.rs
crates/aog-store/: Cargo.toml
crates/aog-store/src/: lib.rs  redb_backend.rs
crates/aog-store/tests/: raft.rs  snapshot.rs  store.rs  watch.rs
crates/aog-tool-runtime/: Cargo.toml
crates/aog-tool-runtime/src/: lib.rs
crates/aog-tool-runtime/tests/: live_tool_governance.rs
crates/aog-toolproxy/: Cargo.toml
crates/aog-wire/: Cargo.toml
crates/aogctl/: Cargo.toml
crates/aogd/: Cargo.toml
crates/fabric-cache/: Cargo.toml
mai-adapters/: Cargo.toml
mai-adapters/src/: audit.rs  bridge.rs  config.rs  health.rs  lib.rs  manager.rs  process.rs  python_embed.rs  validation.rs
mai-adapters/tests/: benchmarks.rs  e2e_integration.rs  integration_adapters.rs
mai-agent/: Cargo.toml
mai-agent/src/: context.rs  lib.rs  rag.rs  stt.rs  tasks.rs  tools.rs  types.rs
mai-agent/tests/: rag_pipeline_test.rs  task_lifecycle_test.rs  tool_calling_test.rs
mai-api/: Cargo.toml  build.rs
mai-api/config/: scheduler.toml
mai-api/src/: air_gap.rs  audit.rs  audit_wal.rs  auth.rs  config.rs  errors.rs  lib.rs  main.rs  metrics.rs  middleware.rs  openbao_client.rs  production_guard.rs  rate_limit.rs  routes.rs  sealer_builder.rs  server.rs  ship_profile.rs  state.rs  trust_builder.rs  types.rs  vault_builder.rs
mai-api/tests/: audit_wal.rs  auth_bypass_consistency.rs  auth_gate_a.rs  compliance_integration.rs  e2e_inference.sh  grpc_integration.rs  health_system_j13.rs  http_integration.rs  production_guard.rs  sealer_bootstrap.rs  ship_07b_endpoints.rs  ship_11_observability.rs  ship_convergence.rs  ship_profile.rs  streaming_integration.rs  system_integration.rs  tlm42_e2e.rs  trust_production.rs  vault_bootstrap.rs
mai-compliance/: Cargo.toml
mai-compliance/src/: baa.rs  bundle.rs  deid.rs  ear.rs  itar.rs  jurisdiction.rs  lib.rs  medical_entities.rs  phi.rs  subject_hash.rs  tech_data.rs  trust.rs  trust_cache.rs
mai-compliance/tests/: compliance_demos.rs  compliance_perf.rs  phi_perf.rs
mai-core/: Cargo.toml
mai-core/src/: cache.rs  circuit_breaker.rs  errors.rs  health.rs  hotswap.rs  lib.rs  power.rs  registry.rs  scheduler.rs  types.rs  vault.rs
mai-core/tests/: integration_lifecycle.rs
mai-hil/: Cargo.toml
mai-hil/src/: lib.rs
mai-hil/tests/: integration.rs
mai-router/: Cargo.toml
mai-router/rules-config/: hipaa.toml  itar.toml  ocap.toml
mai-router/src/: classifier.rs  cost.rs  entities.rs  fallback.rs  lib.rs  pipeline.rs  router.rs
mai-router/tests/: latency_budget.rs
mai-scheduler/: Cargo.toml
mai-scheduler/src/: balancer.rs  decision_cache.rs  default.rs  lib.rs  placement.rs  preemption.rs  registry.rs  scheduler.rs  types.rs
mai-scheduler/tests/: gate_c_session33.rs  topology_integration.rs
mai-sdk-python/: pyproject.toml
mai-sdk-python/docs/: error-handling.md  quickstart.md
mai-sdk-python/tests/: test_client_methods.py  test_version.py
mai-sdk-rs/: Cargo.toml
mai-sdk-rs/src/: lib.rs
mai-sdk-rs/tests/: streaming.rs
mai-vault/: Cargo.toml
mai-vault/src/: audit.rs  config.rs  file_dev.rs  init.rs  lib.rs  pqc.rs  profiles.rs  tpm.rs  vectors.rs  zfs.rs  zfs_ops.rs
mai-vault/tests/: distribution_anchor.rs  live_zfs.rs
(+1014 files in other folders)
