[workspace]
resolver = "2"
members = [
    "mai-core",
    "mai-hil",
    "mai-adapters",
    "mai-api",
    "mai-sdk-rs",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "LicenseRef-Proprietary"
repository = "https://github.com/USS-Parks/im-mighty-eel-mai"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP/gRPC
axum = { version = "0.8", features = ["ws"] }
tonic = "0.12"
prost = "0.13"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Error handling
thiserror = "2"

# Async trait (dyn-compatible async methods)
async-trait = "0.1"

# FFI bridge
pyo3 = { version = "0.22", features = ["auto-initialize"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

# GPU access (feature-gated at crate level, not here)
nvml-wrapper = "0.10"

# IDs
uuid = { version = "1", features = ["v4", "serde"] }

# Hashing (cache keys)
blake3 = "1.5"

# Testing
tokio-test = "0.4"
mockall = "0.13"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# Stub-phase exceptions: re-enable as implementations land
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
doc_markdown = "allow"
struct_excessive_bools = "allow"

[profile.release]
lto = true
codegen-units = 1
strip = "symbols"
