[workspace]
resolver = "2"
members = [
    "mai-core",
    "mai-hil",
    "mai-adapters",
    "mai-api",
    "mai-sdk-rs",
    "mai-vault",
    "mai-agent",
    "mai-scheduler",
    "mai-router",
    "mai-compliance",
    "crates/fabric-contracts",
    "crates/fabric-crypto",
    "crates/fabric-proof",
    "tools/pkg-builder",
    "tools/rule-tester",
    "tools/mai-admin",
    "tools/mai-launcher",
    "tools/gen-trust-staging",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
# MSRV: let-chains (used in mai-compliance) stabilised in 1.88.
# Discovered during DOUGHERTY J-04 docker-build verification — the
# prior "1.85" claim did not match the code. See J-04 fix-up commit.
rust-version = "1.88"
license = "LicenseRef-Proprietary"
repository = "https://github.com/USS-Parks/im-mighty-eel-mai"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP/gRPC
axum = { version = "0.8", features = ["ws"] }
tonic = "0.12"
prost = "0.13"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Error handling
thiserror = "2"

# Async trait (dyn-compatible async methods)
async-trait = "0.1"

# Request validation (API layer)
validator = { version = "0.20", features = ["derive"] }

# FFI bridge (Rust ↔ Python, adapter framework)
pyo3 = { version = "0.24", features = ["auto-initialize"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

# GPU access (feature-gated at crate level, not here)
nvml-wrapper = "0.10"

# IDs
uuid = { version = "1", features = ["v4", "serde"] }

# Time
chrono = "0.4"

# Hashing (cache keys)
blake3 = "1.5"

# Concurrent maps
dashmap = "6"

# Testing
tokio-test = "0.4"
mockall = "0.13"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
print_stdout = "deny"
print_stderr = "deny"
# Stub-phase exceptions: re-enable as implementations land
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
doc_markdown = "allow"
struct_excessive_bools = "allow"
too_many_lines = "allow"
cognitive_complexity = "allow"
return_self_not_must_use = "allow"
wildcard_imports = "allow"

[profile.release]
lto = true
codegen-units = 1
strip = "symbols"
