[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mai-sdk"
version = "0.1.0"
description = "MAI Python SDK for IM-OS applications"
requires-python = ">=3.12"
license = {text = "Proprietary"}
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
    "structlog>=24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "mypy>=1.10",
]

[tool.hatch.build.targets.wheel]
packages = ["src/mai"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "ANN", "S", "B", "A", "COM", "C4", "ISC", "ICN", "PIE", "PT", "RSE", "RET", "SIM", "TID", "TCH", "ARG", "ERA", "PL", "TRY", "FLY", "PERF", "RUF"]
ignore = [
    "RSE102", "PLR2004", "RET505", "RET506", "SIM108", "SIM117",
    "PLC0415", "PERF401", "PERF402", "PLR0911", "PLR0913", "PLR1714",
    "ANN001", "ANN201", "ANN204", "ANN401",
    "S101", "S310",
    "TC001", "TC002", "TC003",
    "TRY003", "TRY300", "TRY400",
    "COM812",
    "ERA001",
    "W292",
    "SIM212",
]

[tool.ruff.lint.per-file-ignores]
"**/tests/**/*.py" = ["S101"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "integration: requires real MAI instance",
]
