[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mai-sdk"
version = "0.1.0"
description = "MAI Python SDK for IM-OS applications"
requires-python = ">=3.12"
license = {text = "Proprietary"}
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
    "structlog>=24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "mypy>=1.10",
]

[tool.hatch.build.targets.wheel]
packages = ["src/mai"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "ANN", "S", "B", "A", "COM", "C4", "ISC", "ICN", "PIE", "PT", "RSE", "RET", "SIM", "TID", "TCH", "ARG", "ERA", "PL", "TRY", "FLY", "PERF", "RUF"]
ignore = [
    "RSE102", "PLR2004", "RET505", "RET506", "SIM108", "SIM117",
    "PLC0415", "PERF401", "PERF402", "PLR0911", "PLR0913", "PLR1714",
    "ANN001", "ANN201", "ANN204", "ANN401",
    "S101", "S310",
    "TC001", "TC002", "TC003",
    "TRY003", "TRY300", "TRY400",
    "COM812",
    "ERA001",
    "W292",
    "SIM212",
]

[tool.ruff.lint.per-file-ignores]
"**/tests/**/*.py" = ["S101"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

# SHIP-12 grandfathered relaxations, shrunk in SHIP-16.
#
# The mai-sdk-python tree (mai-sdk-python/src/) is mypy --strict clean
# and is the hard gate in CI (.github/workflows/ship-validation.yml).
# The adapter tree pre-dates strict typing; the overrides below record
# every error class we are deliberately tolerating today so the gate
# fails closed on anything new.
#
# SHIP-16 split the original single block into a tests-only override
# and a production-adapter override so the production adapter code
# tolerates a strict subset (no test-only codes). Codes that did not
# fire anywhere were dropped entirely. The next time an adapter is
# typed cleanly, drop its disabled codes from the production block.
[[tool.mypy.overrides]]
module = ["adapters.*"]
strict_optional = false
disable_error_code = [
    "no-untyped-def",
    "no-untyped-call",
    "no-any-return",
    "union-attr",
    "attr-defined",
    "call-arg",
    "assignment",
    "override",
    "return-value",
]

# Test-file additions: adapter tests use pytest fixtures with implicit
# Any types and exercise __getitem__/Mapping calls that the production
# override does not need to tolerate.
[[tool.mypy.overrides]]
module = [
    "adapters.tests.*",
    "adapters.*.tests.*",
]
strict_optional = false
disable_error_code = [
    "index",
    "type-arg",
    "arg-type",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "integration: requires real MAI instance",
    "e2e: spawns the real mai-api binary as a subprocess (J-10)",
]
