[package]
name = "mai-agent"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Agent/RAG interface layer for the MAI inference abstraction"

[dependencies]
mai-core = { path = "../mai-core" }

# Async
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

# IDs
uuid = { workspace = true }

# Hashing (semantic cache keys)
blake3 = { workspace = true }

# Time
chrono = { workspace = true }

[lints]
workspace = true
