[package]
name = "mai-api"
description = "MAI API server: REST (axum) + gRPC (tonic) + SSE/WebSocket streaming"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
tokio = { workspace = true }
axum = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
async-trait = { workspace = true }
blake3 = { workspace = true }

# Middleware and HTTP utilities
tower = { version = "0.5", features = ["util", "timeout"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
futures-core = "0.3"
futures-util = "0.3"
tokio-stream = "0.1"
hyper = { version = "1", features = ["full"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
bytes = "1"
pin-project-lite = "0.2"

# Cryptographic hashing for audit chain
sha3 = "0.10"
hex = "0.4"

# CSPRNG for API key generation (Session 26: OS-backed entropy via OsRng).
rand = "0.8"

# File watching for config hot-reload
notify = { version = "7", features = ["macos_kqueue"] }

mai-core = { path = "../mai-core" }
mai-hil = { path = "../mai-hil" }
mai-adapters = { path = "../mai-adapters" }
mai-scheduler = { path = "../mai-scheduler" }
mai-compliance = { path = "../mai-compliance" }
# SHIP-03: ZfsVault is the production vault backend selected by vault_builder.
# Default features keep pure-Rust PQC; no liboqs/ZFS C deps pulled in.
mai-vault = { path = "../mai-vault" }

# gRPC reflection for grpcurl/grpcui discovery
tonic-reflection = "0.12"

[build-dependencies]
tonic-build = "0.12"
prost-build = "0.13"

[dev-dependencies]
tokio-test = { workspace = true }
mockall = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
# SHIP-03: tempdir-backed vault root for vault_builder integration tests.
tempfile = "3"
# SHIP-06: ML-DSA-87 key generation + signing inside trust_production.rs so
# the test bundle is verifiable by the same MlDsaBundleVerifier path the
# production builder constructs. Version pinned to match mai-compliance.
ml-dsa = "0.0.4"

[lints]
workspace = true
