[package]
name = "mai-core"
description = "MAI core kernel: scheduler, registry, power state machine, health monitor, hot-swap manager"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
blake3 = "1.5"

[dev-dependencies]
mockall = { workspace = true }

[lints]
workspace = true
