[package]
name = "mai-hil"
version = "0.1.0"
edition = "2021"
description = "Island Mountain MAI - Hardware Interface Layer"
license = "Proprietary"
rust-version = "1.75"

[dependencies]
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
