[package]
name = "mai-hil"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Island Mountain MAI - Hardware Interface Layer"

[dependencies]
async-trait = "0.1"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
nvml-wrapper = { workspace = true, optional = true }

[dev-dependencies]
mockall = { workspace = true }

[features]
default = []
nvidia = ["nvml-wrapper"]
integration = ["nvidia"]

[lints]
workspace = true
