[package]
name = "mai-router"
description = "Lamprey Query Router: local vs cloud routing with sensitivity classification, entity detection, and budget enforcement"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
blake3 = { workspace = true }
chrono = { workspace = true }
regex = "1"
# G7: fold input to a canonical form (compatibility decomposition + mark strip)
# before entity matching so homoglyph / full-width / diacritic obfuscation is caught.
unicode-normalization = "0.1"

[lints]
workspace = true
