[package]
name = "mai-scheduler"
description = "MAI inference scheduler: request routing, instance registry, model alias resolution"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
dashmap = { workspace = true }
chrono = { workspace = true }
blake3 = { workspace = true }

mai-core = { path = "../mai-core" }

[lints]
workspace = true
