[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mai-sdk"
version = "0.1.0"
description = "MAI Python SDK for IM-OS applications"
requires-python = ">=3.12"
license = {text = "Proprietary"}
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
    "structlog>=24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "mypy>=1.10",
]

[tool.hatch.build.targets.wheel]
packages = ["src/mai"]

# Ruff, mypy, pytest config lives in root pyproject.toml.
# No [tool.ruff] section here so ruff inherits from root.
