[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mai-sdk"
version = "0.2.0"
description = "MAI Python SDK for IM-OS applications"
requires-python = ">=3.12"
license = {text = "Proprietary"}
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
    "structlog>=24.0",
]

[project.scripts]
mai = "mai.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "mypy>=1.10",
]

[tool.hatch.build.targets.wheel]
packages = ["src/mai"]

# Ruff and mypy config live in the root pyproject.toml; no [tool.ruff]
# section here so ruff inherits from root.
#
# Pytest config is local (AQ-002): the SDK uses a src/ layout, so tests
# `import mai` only resolve when `src` is on the path. Declaring the
# section here also makes pytest treat this dir as the rootdir when run
# from the SDK, so collection is reliable whether invoked here or from the
# repo root — no editable install required.
[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
testpaths = ["tests"]
