[package]
name = "mai-sdk-rs"
description = "MAI Rust SDK for performance-critical L4 components"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
# J-16b: mock HTTP server for the wiremock-based per-method integration tests
# in tests/http_client.rs. Covers the surface Basho's b281b55 implementation
# left untested (it shipped with only 2 tokio tests inside lib.rs).
wiremock = "0.6"

[lints]
workspace = true
