[package]
name = "mai-vault"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "L2 vault implementation: ZFS storage, PQC encryption, TPM, profiles, audit, vectors"

[features]
# dual-PQC strategy.
#
#  * `pqc-dev`   — RustCrypto-only, no C deps. Default for cross-platform dev/test.
#                  KEM: `ml-kem` (FIPS 203). DSA: `ml-dsa` (FIPS 204, pre-1.0).
#  * `pqc-prod`  — REMOVED (SOV-0.2b). Used the now-archived `pqcrypto-*` liboqs
#                  crates; nothing selected it. Re-add later behind a new feature
#                  using the maintained `oqs` crate if ITAR/FIPS requires it.
default = ["pqc-dev"]
pqc-dev = ["dep:ml-kem", "dep:ml-dsa", "dep:rand_core"]

[dependencies]
# Workspace shared
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
blake3 = { workspace = true }

# Core interface crate
mai-core = { path = "../mai-core" }

# Symmetric AEAD (bulk encryption after KEM key exchange / for software TPM seal).
aes-gcm = "0.10"
chacha20poly1305 = "0.10"

# Key-derivation function (HKDF over SHA3-256) used to derive symmetric keys
# from KEM shared secrets and PCR state.
hkdf = "0.12"
sha3 = "0.10"
# SHA-256 for the distribution-anchor fingerprint (`sha256:<hex>`, the format
# a package manifest's security.public_key_fingerprint declares).
sha2 = "0.10"

# OS CSPRNG.
rand = "0.8"

# RustCrypto PQC stack (pqc-dev feature).
ml-kem = { version = "0.2", optional = true }
ml-dsa = { version = "0.0.4", optional = true }
rand_core = { version = "0.6", optional = true, features = ["getrandom"] }

[dependencies.chrono]
workspace = true

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
